--- a/myCssExercices/CSS-pixel-perfect/styles.css
+++ b/myCssExercices/CSS-pixel-perfect/styles.css
@@ -8,36 +8,112 @@
 }
 
 body{
-    background-color: #d74949;
-    width: 1440px;
+
+    font-family: "Roboto";
+    display: block;
+    text-align: center;
+    height: 615px;
+}
+.bg {
+    background-color: #d7494a;
 }
 .container{
     background-color: #F3F3F3;
-    width: 1110px;
-    min-height: 800px;
-    margin: 0px 165px;
+    max-width: 1110px;
+    margin: 0px auto;
+    padding: 100px 50px;
 }
 h1{
-    width: 64px;
-    height: 16px;
+    display: block;
     /*position:absolute;*/ 
-    font-weight: 300px;
+    font-weight: bold;
     font-size: 14px;
     line-height: 16.41px;
     text-shadow: 0px 4px 4px rgba(0,0,0,0.25);
+    text-align: left;
 
 }
+h2 {
+    text-align: right;
+    font-size: 16px;
+    font-weight: 700;
 
+}
 footer{
-    width: 1440px;
+    width: 100%;
     height: 70px;
-    position: absolute;
-    background: #3A3A3A;
-    bottom: 0px;
+    /*position: absolute;*/
+    background-color: #3A3A3A;
+    margin: auto;
+    
 }
+#title,#name,#linkedin,#whatsapp{
+    padding-left: 15px;
+    
+}
+
 .container>p {
     text-transform: uppercase;
+    width: 1009px;
+    height: 23px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 23.44px;
+    text-align: center;
+    margin: auto;
 }
 .container>p>span{
     color: #8f2628;
+}
+.card {
+    color: #FFFFFF;
+    width: 200px;
+    height: 300px;
+    border-radius: 15px;
+    filter: drop-shadow(0, 4px,4px, rgba(0,0,0,0.25));
+    margin-top: 38px;
+    box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
+    text-align: left;
+
+}
+#profile {
+    width: 200px;
+    height: 185px;
+    border-radius: 15px 15px 0 0;
+}
+#name,#title{
+
+    line-height: 16.41px;
+    
+}
+#name{
+    letter-spacing: 4%;
+    color: #000;
+    font-weight: 700;
+    padding-top: 15px;
+}
+#title{
+    color: #000;
+    font-weight: 300;
+    font-size: 14px;
+}
+#linkedin {
+    width: 18px;
+    height: 18px;
+}
+#whatsapp {
+    width: 18px;
+    height: 18px;
+    padding-top: 10px;
+}
+footer>p{
+    text-align: center;
+    height: 14px;
+    color: #FFFFFF;
+    padding-top: 25px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16.41px;
+    margin: auto;
 }
