--- a/myCssExercices/Reproduce Website/style.css
+++ b/myCssExercices/Reproduce Website/style.css
@@ -152,16 +152,16 @@ h2 {
     justify-content: flex-start;
     margin-top: 82px;
 }
-/* .cont-hr{
+ .cont-hr{
     max-width: 1200px;
     margin: 0 auto;
-} */
+} 
 #last-hr{
-    /* margin-left: 40px;
+    margin-left: 40px;
     display: flex;
     justify-content: flex-start;
-     */
-    transform: translateX(390px);
+     
+    /* transform: translateX(390px); */
     width: 145px;
 }
 
