--- a/myCssExercices/Reproduce Website/style.css
+++ b/myCssExercices/Reproduce Website/style.css
@@ -213,3 +213,10 @@ h2 {
     grid-row-start: 2;
     grid-row-end: 2;
 }
+h1 {
+    font-family: "Raleway";
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 36.54px;
+    padding-top: 82px;
+}
