--- a/myCssExercices/Final_css_project/styles.css
+++ b/myCssExercices/Final_css_project/styles.css
@@ -13,23 +13,27 @@
 img{
     width: 100%;
 }
-
-body{
+.main-cont{
     max-width: 1110px;
     margin: 0 auto;
-    font-family: "Inter";
 }
+/*body{
+    margin: 0 auto;
+    font-family: "Inter";
+}*/
+
 .menu-nav{
-    width: 100%;
     display: flex;
     justify-content: space-between;
-    margin-top: 72px;
-    margin-bottom: 72px;
+    min-height: 180px;
+    align-items: center;
     
 }
-
+#hamburger-menu {
+    display: none;
+}
 #logo{
-    max-width: 64px;
+    width: 64px;
 }
 ul {
     display: flex;
@@ -37,32 +41,30 @@ ul {
     
 }
 .grid-main {
-    width: 100%;
     display:grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
     gap: 30px;
-    margin: 0px auto;
-    margin-bottom: 71px;
 }
 
 #grid-sec {
+    grid-column: 1/3;
+    grid-row: 1/2;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    margin: 0px auto;
-    height: 511px;
+    grid-template-rows: 300px 1fr;
     gap: 30px;
 
 }
 
 #item1 {
     grid-column: 1/3;
-    grid-row: 1/1;
+    grid-row: 1/2;
 }
 
 #img1{
-    max-height: 300px;
-    max-width: 730px;
+    height: 300px;
+    width: 100%;
     object-fit: cover;
     object-position: 0% 0%;
 }
@@ -72,16 +74,16 @@ ul {
     font-weight: 800;
     font-size: 56px;
     line-height: 56px;
-    width: 350px;
-    height: 182px;
-    grid-area: 2/1/2/2;
+    grid-column: 1/2;
+    grid-row: 2/3;
 }
 
 .black-cont {
-    width: 350px;
-    height: 511px;
     background-color: black;
     color: white;
+    grid-column: 3/4;
+    grid-row: 1/2;
+    padding-bottom: 30px;
 }
 
 #title-bc {
@@ -145,8 +147,6 @@ ul {
     
 }
 #third-p {
-    width: 302px;
-    height: 52px;
     color: #C5C6CE;
     font-weight: 400;
     font-size: 15px;
@@ -156,7 +156,7 @@ ul {
 
 #linear{
     height: 1px;
-    width: 302px;
+    max-width: 300px;
     border-bottom: 1px solid #5E607A;;
     margin-top: 29px;
     margin-bottom: 31px;
@@ -169,8 +169,6 @@ ul {
     font-weight: 400;
     font-size: 15px;
     line-height: 26px;
-    width: 350px;
-    min-height: 104px;
     position: relative;
 }
 
@@ -186,14 +184,15 @@ ul {
     padding: 13px 35px 11px 31px;
     position: absolute;
     bottom: 0;
+    margin-top: 25px;
 }
 
 .last-grid {
-    max-width: 1110px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     gap: 30px;
+    margin-top : 70px;
 }
 
 #grid1 {
@@ -204,8 +203,6 @@ ul {
 }
 
 #bit1 {
-    max-width: 100px;
-    max-height: 127px;
     grid-area: 1/1/2/2;
 }
 
@@ -230,8 +227,54 @@ h3 {
 #p-grid2 {
     height: 52px;
     gap: 0px;
-    font-family: "Inter";
+    font-family: "Inter", sans-serif;
     font-size: 15px;
     font-weight: 400;
     line-height: 26px;
+}
+
+
+@media screen and (max-width: 375px) {
+
+
+.menu-nav>ul {
+    display: none;
+}
+#hamburger-menu {
+    display: block;
+    width: 40px;
+    height: 17px;
+    
+}
+.grid-main{
+    display: flex;
+    flex-direction: column;
+}
+#img1 {
+    width: 340px;
+    height: 300px;
+    object-fit: cover;
+
+}
+
+#grid-sec {
+    display: flex;
+    flex-direction: column;
+}
+
+#btn {
+    position: static;
+}
+.last-grid {
+    display: flex;
+    flex-direction: column;
+}
+
+.main-cont{
+    padding: 0 10px;
+    margin: 0 auto;
+}
+#item1 {
+    text-align: center;
+}
 }
