save-ultimate-project-sec-cont-1

--- a/myCssExercices/ultimate-exo/css/style.css
+++ b/myCssExercices/ultimate-exo/css/style.css
@@ -2,10 +2,6 @@
   text-transform: uppercase;
 }
 
-#btn-2, #btn-1 {
-  text-transform: uppercase;
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -16,7 +12,6 @@ body {
   background-image: url("../img/deco1.svg"), linear-gradient(236.56deg, #2C2D65 0.35%, #201F22 100%);
   background-repeat: no-repeat;
   background-position: 110% -100%;
-  height: 100vh;
 }
 
 li {
@@ -68,6 +63,9 @@ ul li {
   font-family: "Barlow";
 }
 
+.aw-p {
+  margin-top: 110px;
+}
 .aw-p h1 {
   font-family: "Barlow";
   font-size: 64px;
@@ -76,6 +74,7 @@ ul li {
   letter-spacing: 0.045em;
   text-align: left;
   text-transform: uppercase;
+  margin-bottom: 2Opx;
 }
 .aw-p h2 {
   font-family: "Barlow";
@@ -85,6 +84,7 @@ ul li {
   letter-spacing: 0.045em;
   text-align: left;
   color: #E8AB36;
+  margin-bottom: 20px;
 }
 .aw-p p {
   width: 406px;
@@ -99,14 +99,111 @@ ul li {
   line-height: 32px;
   letter-spacing: 0.045em;
   text-align: left;
+  margin-bottom: 20px;
 }
 
 .btn {
   display: flex;
-  width: 328px;
+  position: relative;
+}
+.btn #btn-1 {
+  background-color: #e6616c;
+  max-width: 152px;
   height: 43px;
   gap: 0px;
-  border-radius: 75px 0px 0px 0px;
+  border-radius: 75px;
   opacity: 0px;
-  color: green;
+  text-align: center;
+  padding-top: 5px;
+}
+.btn #btn-2 {
+  background-color: white;
+  max-width: 152px;
+  height: 43px;
+  gap: 0px;
+  border-radius: 75px;
+  opacity: 0px;
+  text-align: center;
+  padding-top: 5px;
+  color: #000;
+  margin-left: 24px;
+}
+
+.btn::before {
+  content: url(../img/deco3\ 1.svg);
+  position: absolute;
+  z-index: -1;
+  top: -19rem;
+  left: -3rem;
+}
+
+.btn::after {
+  content: url(../img/deco2.svg);
+  position: absolute;
+  left: 285px;
+  top: -65px;
+}
+
+.grid1 {
+  display: grid;
+  grid-template-columns: 1fr 470px;
+  gap: 145px;
+}
+.grid1 #img-grid1 {
+  grid-column: 1/1;
+}
+.grid1 #p-grid {
+  max-width: 470px;
+  font-family: "Barlow";
+  grid-column: 2/3;
+}
+.grid1 #p-grid #p-1 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 3px;
+  text-align: left;
+  color: rgba(255, 255, 255, 0.5019607843);
+  width: 62px;
+  margin-bottom: 10px;
+}
+.grid1 #p-grid #p-2 {
+  width: 415px;
+  height: 128px;
+  font-family: "Barlow" Condensed;
+  font-size: 56px;
+  font-weight: 300;
+  line-height: 64px;
+  text-align: left;
+  color: #FFFFFF;
+  margin-bottom: 30px;
+}
+.grid1 #p-grid #p-3 {
+  font-family: Barlow;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+  text-align: left;
+  max-width: 470px;
+  color: #FFFFFF;
+  margin-bottom: 30px;
+}
+.grid1 #p-grid #p-4 {
+  font-family: Barlow;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 32px;
+  text-align: left;
+  color: rgba(255, 255, 255, 0.5019607843);
+  margin-bottom: 30px;
+}
+.grid1 #p-grid #btn-1 {
+  background-color: #e6616c;
+  max-width: 152px;
+  height: 43px;
+  gap: 0px;
+  border-radius: 75px;
+  opacity: 0px;
+  text-align: center;
+  padding: 10px 20px;
 }
