--- a/myCssExercices/ultimate-exo/scss/style.scss
+++ b/myCssExercices/ultimate-exo/scss/style.scss
@@ -1,5 +1,6 @@
 @import 'utilities';
 @import 'buttons';
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -10,7 +11,6 @@ body {
     background-image: url("../img/deco1.svg"), linear-gradient(236.56deg, #2C2D65 0.35%, #201F22 100%);
     background-repeat: no-repeat;
     background-position: 110% -100%; //right -50px top -112px, right;
-    height: 100vh;
 }
 
 li {
@@ -70,6 +70,7 @@ ul {
 
 .aw-p {
 
+    margin-top: 110px;
 
     h1 {
         font-family: "Barlow";
@@ -79,6 +80,7 @@ ul {
         letter-spacing: 0.045em;
         text-align: left;
         text-transform: uppercase;
+        margin-bottom: 2Opx;
     }
 
     h2 {
@@ -89,6 +91,7 @@ ul {
         letter-spacing: 0.045em;
         text-align: left;
         color: #E8AB36;
+        margin-bottom: 20px;
     }
 
     p {
@@ -105,15 +108,124 @@ ul {
         line-height: 32px;
         letter-spacing: 0.045em;
         text-align: left;
+        margin-bottom: 20px;
     }
 }
 
 .btn {
     display: flex;
-    width: 328px;
-    height: 43px;
-    gap: 0px;
-    border-radius: 75px 0px 0px 0px;
-    opacity: 0px;
-    color: green;
+    position: relative;
+
+    #btn-1 {
+        background-color: $font-color-pink;
+        max-width: 152px;
+        height: 43px;
+        gap: 0px;
+        border-radius: 75px;
+        opacity: 0px;
+        text-align: center;
+        padding-top: 5px;
+
+    }
+
+    #btn-2 {
+        background-color: white;
+        max-width: 152px;
+        height: 43px;
+        gap: 0px;
+        border-radius: 75px;
+        opacity: 0px;
+        text-align: center;
+        padding-top: 5px;
+        color: #000;
+        margin-left: 24px;
+    }
+
+}
+
+.btn::before {
+    content: url(../img/deco3\ 1.svg);
+    position: absolute;
+    z-index: -1;
+    top: -19rem;
+    left: -3rem;
+}
+
+.btn::after {
+    content: url(../img/deco2.svg);
+    position: absolute;
+    left: 285px;
+    top: -65px;
+}
+
+.grid1 {
+    display: grid;
+    grid-template-columns: 1fr 470px;
+    gap: 145px;
+
+    #img-grid1 {
+        grid-column: 1/1;
+    }
+
+    #p-grid {
+        max-width: 470px;
+        font-family: $font-bar;
+        grid-column: 2/3;
+
+        #p-1 {
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 32px;
+            letter-spacing: 3px;
+            text-align: left;
+            color: #FFFFFF80;
+            width: 62px;
+            margin-bottom: 10px;
+        }
+
+        #p-2 {
+            width: 415px;
+            height: 128px;
+            font-family: "Barlow" Condensed;
+            font-size: 56px;
+            font-weight: 300;
+            line-height: 64px;
+            text-align: left;
+            color: #FFFFFF;
+            margin-bottom: 30px;
+        }
+
+        #p-3 {
+            font-family: Barlow;
+            font-size: 20px;
+            font-weight: 400;
+            line-height: 32px;
+            text-align: left;
+            max-width: 470px;
+            color: #FFFFFF;
+            margin-bottom: 30px;
+        }
+
+        #p-4 {
+            font-family: Barlow;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 32px;
+            text-align: left;
+            color: #FFFFFF80;
+            ;
+            margin-bottom: 30px;
+        }
+
+    #btn-1 {
+        background-color: $font-color-pink;
+        max-width: 152px;
+        height: 43px;
+        gap: 0px;
+        border-radius: 75px;
+        opacity: 0px;
+        text-align: center;
+        padding: 10px 20px;
+    }
+    }
 }
