--- a/JobApplyTracker/views/partials/header.ejs
+++ b/JobApplyTracker/views/partials/header.ejs
@@ -3,10 +3,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JobApplyTracker</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <nav>
-    <h1><a href="/">Ninja Smoothies</a></h1>
-  </nav>
+  <div class="head-nav">
+    <img src="./images/logo6.png" alt="logo-website" id="logo">
+    <nav>
+      <li><a href="">Home</a></li>
+      <li><a href="">Dashboard</a></li>
+      <li><a href="">Add Job</a></li>
+      <li><a href="">Logout</a></li>
+
+    </nav>
+  </div>
   
