--- a/JobApplyTracker/public/style.css
+++ b/JobApplyTracker/public/style.css
@@ -47,6 +47,9 @@ body a {
   text-decoration: none;
   color: #BFA181;
 }
+body a:hover {
+  text-decoration: underline;
+}
 body #logo {
   width: 300px;
 }
@@ -68,53 +71,51 @@ body nav {
   justify-content: space-between;
   gap: 30px;
 }
+body #job-annonces-title {
+  justify-content: center;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 body .container {
-  min-height: 80vh;
+  min-height: 75vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-body #login-title {
-  text-align: center;
-  color: #0A1828;
-}
-body .login-form {
-  display: block;
-  justify-content: center;
-  text-align: center;
-  min-height: 290px;
-  width: 300px;
-  background-color: #BFA181;
-  border-radius: 5px 5px;
-  padding-top: 40px;
-}
-body .login-form #form-Login input {
-  width: 90%;
-  border-radius: 5px 5px 5px 5px;
-  border: 1px solid black;
-  margin-bottom: 5px;
-}
-body .login-form #form-Login label {
+body #job-container {
+  padding: 20px;
   display: flex;
-  width: 100%;
-  justify-content: left;
-  padding-left: 20px;
-  color: #0A1828;
-  padding-bottom: 5px;
+  flex-wrap: wrap; /* Allows wrapping of job entries */
+  gap: 15px; /* Space between job entries */
 }
-body .login-form #form-Login button {
-  width: 90%;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  padding-top: 2px;
-  padding-bottom: 2px;
-  background-color: #0A1828;
-  color: #BFA181;
-  border-radius: 5px 5px 5px 5px;
-  border: none;
-  cursor: pointer;
+body #jobs-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px; /* Space between job entries */
 }
-body footer {
+body #jobs-list li {
+  background-color: #ffffff; /* White background for each job entry */
+  border: 1px solid #ddd; /* Light gray border */
+  border-radius: 8px; /* Rounded corners */
+  padding: 15px; /* Padding inside each job entry */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Slight shadow for depth */
+  list-style-type: none; /* Remove default list styling */
+  flex: 1 1 300px; /* Flex-grow, flex-shrink, and flex-basis to handle item sizing */
+  max-width: 100%; /* Ensure items do not exceed container width */
+}
+body .see-more-link {
+  color: #007bff; /* Blue color for links */
+  font-weight: bold; /* Make the link text bold */
+  text-decoration: none; /* Remove underline from link */
+}
+body .see-more-link:hover {
+  text-decoration: underline; /* Underline on hover */
+}
+
+footer {
   text-align: center;
   height: auto;
 }
