--- a/JobApplyTracker/views/partials/header.ejs
+++ b/JobApplyTracker/views/partials/header.ejs
@@ -9,10 +9,10 @@
   <div class="head-nav">
     <img src="./images/logo6.png" alt="logo-website" id="logo">
     <nav>
-      <li><a href="">Home</a></li>
-      <li><a href="">Dashboard</a></li>
-      <li><a href="">Add Job</a></li>
-      <li><a href="">Logout</a></li>
+      <li><a href="/dashboard">Dashboard</a></li>
+      <li><a href="/createjob">Add Job</a></li>
+      <li><a href="/profile">Profile</a></li>
+      <li><a href="/logout">Logout</a></li>
 
     </nav>
   </div>
