--- a/JobApplyTracker/views/partials/header.ejs
+++ b/JobApplyTracker/views/partials/header.ejs
@@ -1,16 +1,16 @@
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JobApplyTracker</title>
-  <link rel="stylesheet" href="./style.css">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JobApplyTracker</title>
+    <link rel="stylesheet" href="/style.css"> <!-- Ensure the path is correct -->
+  </head>
 <body>
   <div class="head-nav">
-    <img src="./images/logo6.png" alt="logo-website" id="logo">
+    <img src="/images/logo6.png" alt="logo-website" id="logo">
     <nav>
       <li><a href="/dashboard">Dashboard</a></li>
-      <li><a href="/createjob">Add Job</a></li>
+      <li><a href="/jobs/add-job">Add Job</a></li>
       <li><a href="/profile">Profile</a></li>
       <li><a href="/logout">Logout</a></li>
 
