commit_register_cvAndPP_works_redirection_dashboardOK

--- a/JobApplyTracker/views/login.ejs
+++ b/JobApplyTracker/views/login.ejs
@@ -14,6 +14,7 @@
                 <br>
                 <button type="submit">Login</button>
             </form>
+            <a href="/register">Not register yet?</a>
         </div>
     </div>
 
