--- a/JobApplyTracker/views/register.ejs
+++ b/JobApplyTracker/views/register.ejs
@@ -20,6 +20,9 @@
                 <label for="password">Password:</label>
                 <input type="password" name="password" id="password" required>
                 <br>
+                <label for="github">GitHub Profile (optional):</label>
+                <input type="text" name="github" id="github">
+                <br>
                 <label for="profilePicture">Profile Picture:</label>
                 <input type="file" name="profilePicture" id="profilePicture">
                 <br>
@@ -32,8 +35,7 @@
     </div>
 
     <script>
-        // Optional: Handle form submission with JavaScript if needed
-        // Documented above in the login script
+        
     </script>
 </body>
 
