--- a/JobApplyTracker/views/login.ejs
+++ b/JobApplyTracker/views/login.ejs
@@ -12,7 +12,7 @@
                 <label for="password">Password:</label>
                 <input type="password" name="password" id="password" required>
                 <br>
-                <button type="submit">Login</button>
+                <button type="submit" id="login_button">Login</button>
             </form>
             <a href="/register">Not register yet?</a>
         </div>
