--- a/JobApplyTracker/views/partials/header.ejs
+++ b/JobApplyTracker/views/partials/header.ejs
@@ -7,7 +7,9 @@
   </head>
 <body>
   <div class="head-nav">
-    <img src="/images/logo6.png" alt="logo-website" id="logo">
+    <a href="/dashboard" id="logo-link">
+      <img src="/images/logo6.png" alt="logo-website" id="logo">
+    </a>
     <nav>
       <li><a href="/dashboard">Dashboard</a></li>
       <li><a href="/jobs/add-job">Add Job</a></li>
