--- a/JobApplyTracker/public/style.css
+++ b/JobApplyTracker/public/style.css
@@ -88,31 +88,61 @@ body .container {
 body #job-container {
   padding: 20px;
   display: flex;
-  flex-wrap: wrap; /* Allows wrapping of job entries */
-  gap: 15px; /* Space between job entries */
+  flex-wrap: wrap;
+  gap: 15px;
 }
 body #jobs-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 15px; /* Space between job entries */
+  gap: 15px;
 }
 body #jobs-list li {
-  background-color: #ffffff; /* White background for each job entry */
-  border: 1px solid #ddd; /* Light gray border */
-  border-radius: 8px; /* Rounded corners */
-  padding: 15px; /* Padding inside each job entry */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Slight shadow for depth */
-  list-style-type: none; /* Remove default list styling */
-  flex: 1 1 300px; /* Flex-grow, flex-shrink, and flex-basis to handle item sizing */
-  max-width: 100%; /* Ensure items do not exceed container width */
+  background-color: #ffffff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 15px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  list-style-type: none;
+  flex: 1 1 300px;
+  max-width: 100%;
 }
 body .see-more-link {
-  color: #007bff; /* Blue color for links */
-  font-weight: bold; /* Make the link text bold */
-  text-decoration: none; /* Remove underline from link */
+  color: #007bff;
+  font-weight: bold;
+  text-decoration: none;
 }
 body .see-more-link:hover {
   text-decoration: underline; /* Underline on hover */
+}
+body .login-form {
+  background: #178582;
+  padding: 40px;
+  border: 1px solid white;
+  border-radius: 5px 5px 5px 5px;
+}
+body .login-form h1 {
+  display: flex;
+  justify-content: center;
+}
+body .login-form input#email {
+  width: 100%;
+  border-radius: 5px 5px 5px 5px;
+  border: none;
+}
+body .login-form input#password {
+  width: 100%;
+  border-radius: 5px 5px 5px 5px;
+  border: none;
+}
+body .login-form button#login_button {
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border: none;
+  background-color: #BFA181;
+  color: white;
+  border-radius: 5px 5px 5px 5px;
+  border: none;
 }
 
 footer {
