--- a/JobApplyTracker/views/dashboard.ejs
+++ b/JobApplyTracker/views/dashboard.ejs
@@ -1,8 +1,8 @@
 <%- include('partials/header'); -%>
 
 <body>
-  <h2 id="job-annonces-title">Your Jobs Announcements here:</h2>
-  <div class="container">
+   <h2 id="job-annonces-title">Your Jobs Announcements here:</h2>
+  <div class="container-of-jobs">
     <div id="job-container">
       <ul id="jobs-list">
         <% if (jobs && jobs.length > 0) { %>
