--- a/JobApplyTracker/public/style.css
+++ b/JobApplyTracker/public/style.css
@@ -85,6 +85,11 @@ body .container {
   align-items: center;
   justify-content: center;
 }
+body .container-of-jobs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 body #job-container {
   padding: 20px;
   display: flex;
@@ -143,6 +148,9 @@ body .login-form button#login_button {
   color: white;
   border-radius: 5px 5px 5px 5px;
   border: none;
+}
+body h2#job-annonces-title {
+  margin-top: 40px;
 }
 
 footer {
