--- a/JobApplyTracker/views/add-job.ejs
+++ b/JobApplyTracker/views/add-job.ejs
@@ -7,6 +7,10 @@
       <fieldset>
         <legend>Job Details</legend>
         <div class="form-group">
+          <label for="companyName">Company Name:</label>
+          <input type="text" id="companyName" name="companyName" required>
+        </div>
+        <div class="form-group">
           <label for="title">Title:</label>
           <input type="text" id="title" name="title">
         </div>
